// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Bootstrap bootstrap initializes reserves and price 1`] = `211834`;

exports[`Bootstrap bootstrap initializes reserves and price 2`] = `
Object {
  "addresses": Object {
    "pool": "0xd8058efe0198ae9dD7D563e1b4938Dcbc86A1F81",
  },
  "reserves": Object {
    "asset": "1000000000000000000",
    "usdc": "1000000000000000000",
  },
}
`;

exports[`Bootstrap bootstrap initializes reserves and price 3`] = `
Object {
  "driftBps": "0",
  "pool": "0xd8058efe0198ae9dD7D563e1b4938Dcbc86A1F81",
  "priceX96": "79228162514264337593543950336",
  "reserves": Object {
    "asset": "1000000000000000000",
    "usdc": "1000000000000000000",
  },
  "sqrtPrices": Object {
    "sqrtAssetPerUsdcX96": "79228162514264337593543950336",
    "sqrtUsdcPerAssetX96": "79228162514264337593543950336",
  },
}
`;

exports[`Bootstrap cannot bootstrap twice (idempotency enforced) 1`] = `211834`;

exports[`Offset bootstrap seeding seeds four pools off-center and snapshots drift (bps) 1`] = `979974`;

exports[`Offset bootstrap seeding seeds four pools off-center and snapshots drift (bps) 2`] = `979974`;

exports[`Offset bootstrap seeding seeds four pools off-center and snapshots drift (bps) 3`] = `979974`;

exports[`Offset bootstrap seeding seeds four pools off-center and snapshots drift (bps) 4`] = `979974`;

exports[`Offset bootstrap seeding seeds four pools off-center and snapshots drift (bps) 5`] = `215170`;

exports[`Offset bootstrap seeding seeds four pools off-center and snapshots drift (bps) 6`] = `215170`;

exports[`Offset bootstrap seeding seeds four pools off-center and snapshots drift (bps) 7`] = `214810`;

exports[`Offset bootstrap seeding seeds four pools off-center and snapshots drift (bps) 8`] = `214810`;

exports[`Offset bootstrap seeding seeds four pools off-center and snapshots drift (bps) 9`] = `
Object {
  "driftBps": "-500",
  "pool": "0xA43C8fA0cb6567312091fb14ebf4d0f65De4a6E4",
  "priceX96": "75266754388551120713866752819",
  "reserves": Object {
    "asset": "1000000000000000000",
    "usdc": "1000000000000000000",
  },
  "sqrtPrices": Object {
    "sqrtAssetPerUsdcX96": "77222060634363718885682874256",
    "sqrtUsdcPerAssetX96": "81286379615119704090192499217",
  },
}
`;

exports[`Offset bootstrap seeding seeds four pools off-center and snapshots drift (bps) 10`] = `
Object {
  "driftBps": "-499",
  "pool": "0x39c3A55F68Bf9f2992776991F25Aac6813a4F1d0",
  "priceX96": "75274677204802547147626107214",
  "reserves": Object {
    "asset": "1000000000000000000",
    "usdc": "1000000000000000000",
  },
  "sqrtPrices": Object {
    "sqrtAssetPerUsdcX96": "77226124846394341099761803954",
    "sqrtUsdcPerAssetX96": "81282101722339060203938326444",
  },
}
`;

exports[`Offset bootstrap seeding seeds four pools off-center and snapshots drift (bps) 11`] = `
Object {
  "driftBps": "498",
  "pool": "0x5bFD50cBC7139F731a576a8dd7375c8D0ec48eba",
  "priceX96": "83181647823726128039461793457",
  "reserves": Object {
    "asset": "1000000000000000000",
    "usdc": "1000000000000000000",
  },
  "sqrtPrices": Object {
    "sqrtAssetPerUsdcX96": "81180842025581849306864569730",
    "sqrtUsdcPerAssetX96": "77322451686429040200842527604",
  },
}
`;

exports[`Offset bootstrap seeding seeds four pools off-center and snapshots drift (bps) 12`] = `
Object {
  "driftBps": "499",
  "pool": "0x0D077176f54744A78Da0B8CBB58Fdd76552B4ead",
  "priceX96": "83189570639977554473221147852",
  "reserves": Object {
    "asset": "1000000000000000000",
    "usdc": "1000000000000000000",
  },
  "sqrtPrices": Object {
    "sqrtAssetPerUsdcX96": "81184708056111249417064520224",
    "sqrtUsdcPerAssetX96": "77318769577248808968632876405",
  },
}
`;
